other fixes: Products page tabs style error on mobile screens uniform page headers style to avoid style shifts on page change. style fixes

--- a/src/components/HeadLineSection/headline.module.scss
+++ b/src/components/HeadLineSection/headline.module.scss
@@ -14,6 +14,7 @@
     & > div {
         padding: var(--baseSpacing);
         max-width: var(--max-width);
+        margin: 3rem auto 3rem auto;
         @include media-for-phone-only {
             padding: var(--baseSpacing);
         }
