--- a/src/styles/pages/insights.module.scss
+++ b/src/styles/pages/insights.module.scss
@@ -10,7 +10,7 @@
     align-items: center;
     flex-direction: column;
     max-width: 600px;
-    margin: 0 auto 3rem auto;
+    margin: 3rem auto 3rem auto;
     padding: 2rem 2rem;
     position: relative;
     border-bottom: 2px solid var(--bg-grey);
@@ -18,7 +18,6 @@
     @include media-for-tablet-portrait-up {
         padding: 2rem 0rem;
     }
-
     p:last-child {
 
     }
@@ -42,7 +41,9 @@
     }
 
     p {
+        max-width: 300px;
         margin-top: 1rem;
         font-size: 0.7rem;
+        opacity: 0.7;
     }
 }
